<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_side"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/side"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/container_specific_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/volume"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_circumference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/circumference"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>